@@ -4,10 +4,13 @@ import org.hofftech.parking.model.Parcel;
 import org.hofftech.parking.model.ParcelStartPosition;
 import org.hofftech.parking.model.Truck;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import static org.junit.jupiter.api.Assertions.*;
 
-import java.util.*;
+import static org.assertj.core.api.Assertions.*;
+
+import java.util.ArrayList;
+import java.util.List;
 
 class ParcelServiceTest {
 
@@ -20,13 +23,11 @@ class ParcelServiceTest {
         truck = new Truck(10, 10);
     }
 
-    /**
-     * Тестирует успешное добавление посылки в пустой грузовик.
-     */
     @Test
+    @DisplayName("Тестирует успешное добавление посылки в пустой грузовик")
     void testAddPackage_SuccessfulAddition() {
         // Определяем форму посылки: квадрат 3x3
-        List<String> shape = Arrays.asList(
+        List<String> shape = List.of(
                 "XXX",
                 "X X",
                 "XXX"
@@ -34,37 +35,34 @@ class ParcelServiceTest {
         Parcel parcel = new Parcel("Parcel1", shape, 'X', null);
 
         boolean result = parcelService.tryPack(truck, parcel);
-        assertTrue(result, "Посылка должна быть успешно добавлена");
-
-        assertNotNull(parcel.getParcelStartPosition(), "Позиция посылки должна быть установлена");
+        assertThat(result)
+                .as("Посылка должна быть успешно добавлена")
+                .isTrue();
 
         ParcelStartPosition pos = parcel.getParcelStartPosition();
-        int x = pos.x(); // Изменено с getX() на x()
-        int y = pos.y(); // Изменено с getY() на y()
+        assertThat(pos)
+                .as("Позиция посылки должна быть установлена")
+                .isNotNull();
 
-        List<String> reversedShape = parcel.getReversedShape();
+        List<String> expectedShape = parcel.getReversedShape();
 
-        for (int row = 0; row < reversedShape.size(); row++) {
-            String rowStr = reversedShape.get(row);
-            for (int col = 0; col < rowStr.length(); col++) {
-                char expected = rowStr.charAt(col);
-                if (expected != ' ') {
-                    assertEquals(expected, truck.getGrid()[y + row][x + col],
-                            String.format("Сетка грузовика должна содержать символ '%c' на позиции (%d, %d)", expected, y + row, x + col));
-                }
-            }
-        }
+        // Извлекаем фактический раздел сетки, где должна быть размещена посылка
+        List<String> actualGridSection = getGridSection(truck, pos, expectedShape.size(), expectedShape.get(0).length());
 
-        assertTrue(truck.getParcels().contains(parcel), "Список посылок грузовика должен содержать добавленную посылку");
+        assertThat(actualGridSection)
+                .as("Сетка грузовика должна содержать форму посылки")
+                .containsExactlyElementsOf(expectedShape);
+
+        assertThat(truck.getParcels())
+                .as("Список посылок грузовика должен содержать добавленную посылку")
+                .contains(parcel);
     }
 
-    /**
-     * Тестирует успешное добавление нескольких посылок без пересечений.
-     */
     @Test
+    @DisplayName("Тестирует успешное добавление нескольких посылок без пересечений")
     void testAddMultiplePackages_SuccessfulAdditions() {
         // Первая посылка: 3x3 квадрат
-        List<String> shape1 = Arrays.asList(
+        List<String> shape1 = List.of(
                 "XXX",
                 "X X",
                 "XXX"
@@ -72,7 +70,7 @@ class ParcelServiceTest {
         Parcel parcel1 = new Parcel("Parcel1", shape1, 'X', null);
 
         // Вторая посылка: 2x2 квадрат
-        List<String> shape2 = Arrays.asList(
+        List<String> shape2 = List.of(
                 "XX",
                 "XX"
         );
@@ -81,128 +79,128 @@ class ParcelServiceTest {
         boolean result1 = parcelService.tryPack(truck, parcel1);
         boolean result2 = parcelService.tryPack(truck, parcel2);
 
-        assertTrue(result1, "Первая посылка должна быть успешно добавлена");
-        assertTrue(result2, "Вторая посылка должна быть успешно добавлена");
+        assertThat(result1)
+                .as("Первая посылка должна быть успешно добавлена")
+                .isTrue();
 
-        assertTrue(truck.getParcels().contains(parcel1), "Список посылок должен содержать первую посылку");
-        assertTrue(truck.getParcels().contains(parcel2), "Список посылок должен содержать вторую посылку");
+        assertThat(result2)
+                .as("Вторая посылка должна быть успешно добавлена")
+                .isTrue();
+
+        assertThat(truck.getParcels())
+                .as("Список посылок должен содержать первую посылку")
+                .contains(parcel1)
+                .as("Список посылок должен содержать вторую посылку")
+                .contains(parcel2);
     }
 
-    /**
-     * Тестирует добавление посылки, которая выходит за пределы грузовика.
-     */
     @Test
+    @DisplayName("Тестирует добавление посылки, которая выходит за пределы грузовика")
     void testAddPackage_ExceedsTruckLimits() {
-        List<String> shape = Arrays.asList(
-                "XXXXXXXXXXX" // Ширина 11
-        );
+        List<String> shape = List.of("XXXXXXXXXXX"); // Ширина 11
         Parcel parcel = new Parcel("BigParcel", shape, 'B', null);
 
         boolean result = parcelService.tryPack(truck, parcel);
-        assertFalse(result, "Посылка не должна быть добавлена из-за превышения ширины грузовика");
+        assertThat(result)
+                .as("Посылка не должна быть добавлена из-за превышения ширины грузовика")
+                .isFalse();
 
-        assertFalse(truck.getParcels().contains(parcel), "Список посылок грузовика не должен содержать превышающую посылку");
+        assertThat(truck.getParcels())
+                .as("Список посылок грузовика не должен содержать превышающую посылку")
+                .doesNotContain(parcel);
     }
 
-    /**
-     * Тестирует добавление посылки в верхний левый угол грузовика.
-     */
     @Test
+    @DisplayName("Тестирует добавление посылки в верхний левый угол грузовика")
     void testAddPackage_PlaceAtTopLeftCorner() {
-        List<String> shape = Arrays.asList(
+        List<String> shape = List.of(
                 "XX",
                 "XX"
         );
         Parcel parcel = new Parcel("Parcel1", shape, 'X', null);
 
         boolean result = parcelService.tryPack(truck, parcel);
-        assertTrue(result, "Посылка должна быть успешно добавлена");
+        assertThat(result)
+                .as("Посылка должна быть успешно добавлена")
+                .isTrue();
 
         ParcelStartPosition pos = parcel.getParcelStartPosition();
-        assertEquals(0, pos.x(), "X позиция должна быть 0");
-        assertEquals(0, pos.y(), "Y позиция должна быть 0");
+        assertThat(pos.x())
+                .as("X позиция должна быть 0")
+                .isEqualTo(0);
+        assertThat(pos.y())
+                .as("Y позиция должна быть 0")
+                .isEqualTo(0);
 
-        List<String> reversedShape = parcel.getReversedShape();
+        List<String> expectedShape = parcel.getReversedShape();
 
-        for (int y = 0; y < reversedShape.size(); y++) {
-            for (int x = 0; x < reversedShape.get(y).length(); x++) {
-                char expected = reversedShape.get(y).charAt(x);
-                if (expected != ' ') {
-                    assertEquals(expected, truck.getGrid()[pos.y() + y][pos.x() + x],
-                            String.format("Сетка грузовика должна содержать символ '%c' на позиции (%d, %d)", expected, pos.y() + y, pos.x() + x));
-                }
-            }
-        }
+        // Извлекаем фактический раздел сетки, где должна быть размещена посылка
+        List<String> actualGridSection = getGridSection(truck, pos, expectedShape.size(), expectedShape.get(0).length());
+
+        assertThat(actualGridSection)
+                .as("Сетка грузовика должна содержать форму посылки")
+                .containsExactlyElementsOf(expectedShape);
     }
 
-    /**
-     * Тестирует добавление посылки, когда грузовик полностью заполнен.
-     */
     @Test
+    @DisplayName("Тестирует добавление посылки, когда грузовик полностью заполнен")
     void testAddPackage_FullTruck() {
-        List<String> smallShape = Arrays.asList(
+        List<String> smallShape = List.of(
                 "XX",
                 "XX"
         );
 
-        int numParcels = (truck.getWidth() / 2) * (truck.getHeight() / 2);
-        for (int i = 0; i < numParcels; i++) {
-            Parcel parcel = new Parcel("Parcel" + i, smallShape, 'S', null);
-            boolean result = parcelService.tryPack(truck, parcel);
-            assertTrue(result, "Посылка должна быть успешно добавлена");
-        }
+        // Используем вспомогательный метод для заполнения грузовика посылками
+        fillTruckWithParcels(smallShape, 'S', (truck.getWidth() / 2) * (truck.getHeight() / 2));
 
         Parcel extraParcel = new Parcel("ExtraParcel", smallShape, 'E', null);
         boolean extraResult = parcelService.tryPack(truck, extraParcel);
-        assertFalse(extraResult, "Дополнительная посылка не должна быть добавлена в полностью заполненный грузовик");
+        assertThat(extraResult)
+                .as("Дополнительная посылка не должна быть добавлена в полностью заполненный грузовик")
+                .isFalse();
+
+        assertThat(truck.getParcels())
+                .as("Список посылок грузовика не должен содержать дополнительную пересекающуюся посылку")
+                .doesNotContain(extraParcel);
+    }
+
+
+    /**
+     * Вспомогательный метод для извлечения секции сетки грузовика, соответствующей положению посылки.
+     *
+     * @param truck     Грузовик с сеткой.
+     * @param pos       Начальная позиция посылки.
+     * @param height    Высота формы посылки.
+     * @param width     Ширина формы посылки.
+     * @return Список строк, представляющих соответствующую секцию сетки грузовика.
+     */
+    private List<String> getGridSection(Truck truck, ParcelStartPosition pos, int height, int width) {
+        char[][] grid = truck.getGrid();
+        List<String> section = new ArrayList<>();
+        for (int row = 0; row < height; row++) {
+            StringBuilder sb = new StringBuilder();
+            for (int col = 0; col < width; col++) {
+                sb.append(grid[pos.y() + row][pos.x() + col]);
+            }
+            section.add(sb.toString());
+        }
+        return section;
     }
 
     /**
-     * Проверяет, что методы `canAddParcel` и `placeParcel` корректно выполняют свои обязанности.
-     * Этот тест использует только публичный метод `tryPack`, чтобы проверить всю логику.
+     * Вспомогательный метод для заполнения грузовика посылками.
+     *
+     * @param shape  Форма посылки.
+     * @param marker Маркер посылки.
+     * @param count  Количество посылок для добавления.
      */
-    @Test
-    void testAddPackage_CorrectBehavior() {
-        List<String> shape1 = Arrays.asList(
-                "X",
-                "XXX",
-                " X "
-        );
-        Parcel parcel1 = new Parcel("Parcel1", shape1, 'A', null);
-
-        List<String> shape2 = Arrays.asList(
-                "XX",
-                "XX"
-        );
-        Parcel parcel2 = new Parcel("Parcel2", shape2, 'B', null);
-
-        List<String> shape3 = Arrays.asList(
-                "XXX",
-                "X X",
-                "XXX"
-        );
-        Parcel parcel3 = new Parcel("Parcel3", shape3, 'C', null);
-
-        assertTrue(parcelService.tryPack(truck, parcel1), "Parcel1 должна быть успешно добавлена");
-        assertTrue(parcelService.tryPack(truck, parcel2), "Parcel2 должна быть успешно добавлена");
-        assertTrue(parcelService.tryPack(truck, parcel3), "Parcel3 должна быть успешно добавлена");
-
-        assertEquals(3, truck.getParcels().size(), "В грузовике должно быть 3 посылки");
-
-        for (Parcel parcel : truck.getParcels()) {
-            ParcelStartPosition pos = parcel.getParcelStartPosition();
-            assertNotNull(pos, "Позиция посылки должна быть установлена");
-
-            List<String> reversedShape = parcel.getReversedShape();
-            for (int row = 0; row < reversedShape.size(); row++) {
-                for (int col = 0; col < reversedShape.get(row).length(); col++) {
-                    char expected = reversedShape.get(row).charAt(col);
-                    if (expected != ' ') {
-                        assertEquals(expected, truck.getGrid()[pos.y() + row][pos.x() + col],
-                                String.format("Сетка грузовика должна содержать символ '%c' на позиции (%d, %d)", expected, pos.y() + row, pos.x() + col));
-                    }
-                }
-            }
+    private void fillTruckWithParcels(List<String> shape, char marker, int count) {
+        for (int i = 0; i < count; i++) {
+            Parcel parcel = new Parcel("Parcel" + i, shape, marker, null);
+            boolean result = parcelService.tryPack(truck, parcel);
+            assertThat(result)
+                    .as("Посылка должна быть успешно добавлена")
+                    .isTrue();
         }
     }
 }
